# wasm-demo

./: index.html  package-lock.json  package.json  vite.config.ts
searcher/: Cargo.toml
searcher/lib/: request.ts
searcher/src/: lib.rs  search.rs  web_directory.rs
searcher/tantivy-meta-tokenizer/: Cargo.toml
searcher/tantivy-meta-tokenizer/src/: chinese.rs
src/: main.js
